# aravisGrabber

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp
src/: CMakeLists.txt  bufferReceiver.hpp  camera.cpp  camera.hpp
